# alert-server

./: .env.example  Dockerfile  README.md  compose.yaml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
src/alert/: app.py  create_api_key.py
src/alert/alert/adapter/: __init__.py
src/alert/core/adapter/: __init__.py
src/alert/core/application/: auth.py
src/alert/core/domain/: __init__.py  repository.py
src/alert/infrastructure/: environment.py  redis.py
stages/example/: .env  compose.yaml  generate_api_key.sh
