[project]
name = "alert-server"
version = "0.1.0.dev0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi[standard]>=0.119.0", "tinydb>=4.8.2"]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "assertpy>=1.1",
  "basedpyright>=1.31.7",
  "coverage>=7.10.7",
  "mock>=5.2.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.14.0",
  "testcontainers>=4.13.2",
]
